Update FAQController and other files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,18 @@
 spring.application.name=bc-assist
 
+# Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/bc_assist
 spring.datasource.username=bc_user
 spring.datasource.password=admin123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA & Hibernate Settings
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Enable SQL logging
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Logging
+logging.level.org.springframework=DEBUG
